# ActiveExam

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGES.md  Dockerfile.slim  README.md  railway.json
.engram/: all_projects.json  (+7 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  config_slim.py  main.py  main_slim.py
backend/app/application/: __init__.py
backend/app/domain/: __init__.py  audit_chain.py
backend/app/infrastructure/: __init__.py
backend/app/observability/: __init__.py  logging.py  poc_metrics.py  telemetry.py
backend/app/presentation/: __init__.py
backend/app/workers/: __init__.py  evidence_signing.py  poc_load_worker.py  session_finalization.py
backend/migrations/: README.md  env.py  script.py.mako
backend/scripts/: generar_embedding_key.py  seed_users.py
backend/tests/: __init__.py  conftest.py  test_app_factory.py  test_architecture.py  test_audit_hash_chain.py  test_auth_contextual_service.py  test_auth_http_endpoints.py  test_auth_jit_provisioning.py  test_auth_jwt_validation.py  test_auth_rbac_contextual.py  test_auth_refresh_and_realtime.py  test_biometrics_custody.py  test_biometrics_infra.py  test_biometrics_liveness.py  test_biometrics_matching.py  test_biometrics_retries.py  test_biometrics_service.py  test_c16_review_decision_integration.py  test_c16_review_decision_pure.py  test_c17_dsr_integration.py  test_c17_dsr_pure.py  test_c18_chain_verifier_pure.py  test_c18_verify_chain_integration.py  test_c19_hold_verifier_null.py  test_c19_retention_engine_pure.py  test_c19_retention_integration.py  test_c19_retention_policy_pure.py  test_c19_retention_report_pure.py  test_c55_db_refresh_store.py  test_c55_hashing.py  test_c55_jwt_validator_multi_issuer.py  test_c55_login_endpoint.py  test_c55_seed.py  test_c55_token_policy_multi_issuer.py  test_c55_users_endpoint.py  test_c56_cascade_delete.py  test_c56_embedding_encryption.py  test_c56_enrollment_endpoints.py  test_c56_migration_0007.py  test_c57_slim_auth_e2e.py  (+34 more)
(+1127 files in other folders)
